Moved index.html to root level. Made modifications to project pages to facilitate navigation.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./build/css/style.css" rel="stylesheet">
     <title>GradShow Website</title>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   </head>
   <body class="bg-backgroundColour">
 
@@ -72,7 +72,7 @@
             <p>Voluptatem necessitatibus voluptatum quae ab earum ut optio sed sunt deserunt ea! Impedit ratione aperiam accusamus voluptatum eius.</p>
           </div>
           <div class="buttonOne">
-            <a href="projects/project1.html">Project #1</a>
+            <a href="./build/projects/project1.html">Project #1</a>
           </div>
         </div>
         <div class="card">
@@ -84,7 +84,7 @@
             <p>Voluptatem necessitatibus voluptatum quae ab earum ut optio sed sunt deserunt ea! Impedit ratione aperiam accusamus voluptatum eius.</p>
           </div>
           <div class="buttonOne">
-            <a href="projects/project2.html">Project #2</a>
+            <a href="./build/projects/project2.html">Project #2</a>
           </div>
         </div>
         <div class="card">
@@ -96,7 +96,7 @@
             <p>Voluptatem necessitatibus voluptatum quae ab earum ut optio sed sunt deserunt ea! Impedit ratione aperiam accusamus voluptatum eius.</p>
           </div>
           <div class="buttonOne">
-            <a href="projects/project3.html">Project #3</a>
+            <a href="./build/projects/project3.html">Project #3</a>
           </div>
         </div>
         <div class="card">
@@ -108,7 +108,7 @@
             <p>Voluptatem necessitatibus voluptatum quae ab earum ut optio sed sunt deserunt ea! Impedit ratione aperiam accusamus voluptatum eius.</p>
           </div>
           <div class="buttonOne">
-            <a href="projects/project4.html">Project #4</a>
+            <a href="./build/projects/project4.html">Project #4</a>
           </div>
         </div>
         <div class="card">
@@ -120,7 +120,7 @@
             <p>Voluptatem necessitatibus voluptatum quae ab earum ut optio sed sunt deserunt ea! Impedit ratione aperiam accusamus voluptatum eius.</p>
           </div>
           <div class="buttonOne">
-            <a href="projects/project5.html">Project #5</a>
+            <a href="./build/projects/project5.html">Project #5</a>
           </div>
         </div>
         <div class="card">
@@ -132,7 +132,7 @@
             <p>Voluptatem necessitatibus voluptatum quae ab earum ut optio sed sunt deserunt ea! Impedit ratione aperiam accusamus voluptatum eius.</p>
           </div>
           <div class="buttonOne">
-            <a href="projects/project6.html">Project #6</a>
+            <a href="./build/projects/project6.html">Project #6</a>
           </div>
         </div>
       </section>
@@ -191,5 +191,5 @@
       <h5>&copy;Fairweather & Schrader<script>document.write(new Date().getFullYear())</script></h5>
     </footer>
   </body>
-  <script src="js/script.js"></script>
+  <script src="./build/js/script.js"></script>
   </html>
