Working on loading animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- Dark/light modes -->
 <!-- Accessibility -->
 <!-- Check responsiveness across all screen sizes -->
-<!-- ?? Background images for cards ?? -->
+<!-- Background images for cards -->
 
 <!DOCTYPE html>
 <html lang="en">
